[gui-components] small utils refactoring